<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AirPool</string>
    <string name="facebook_app_id">797893480262143</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search for Group</string>
    <string name="groups">My Groups</string>
    <string name="preferences">My Preferences</string>
    <string name="logout">Logout</string>

    <string name="title_activity_login">Login</string>
    <string name="usernameHint">Username</string>
    <!--<string name="passwordHint">Password</string>-->
    <string name="login_button">Login</string>

    <string name="title_activity_search_results">SearchResultsActivity</string>

    <string name="title_activity_view_group">View a Group</string>
    <string name="groupMembers">Current Group Members</string>
    <string name="groupInfo">Current Group Information</string>
    <string name="toAirport">Going to Airport</string>
    <string name="college">College: N/A</string>
    <string name="airport">Airport: N/A</string>
    <string name="modeOfTransit">Mode of Transportation: No Preference</string>
    <string name="backToSearch">Back to Search Results</string>

    <string name="pickUpLocation">Pick-up Location: None selected</string>
    <string name="dropOffLocation">Drop-off Location: None selected</string>
    <string name="modeOfTransit">Mode of Transportation: None selected</string>
    <!--<string name="backToSearch">Back to Search Results</string>-->
    <string name="joinGroup">Join Group</string>
    <string name="editGroup">Edit Group</string>
    <string name="groupWall">Group Wall</string>

    <string name="title_activity_search_results_map">Search Results: Map</string>
    <string name="switchToList">Switch to List View</string>

    <string name="title_activity_search_results_list">Search Results: List</string>
    <string name="groupResults">Group Results</string>
    <string name="switchToMap">Switch to Map View</string>
    <string name="createAGroup">Create a Group</string>
    <string name="goBack">Back to Search</string>

    <string name="title_activity_preferences">Preferences</string>
    <string name="instructions">Instructions</string>
    <string name="selectPrefs">Check all the different modes of transportation you prefer. If you have
    no preference, simply click the "No preference" box. Clicking the "No Preference" box will
    override any other preferences.</string>
    <string name="taxi">Take a taxi</string>
    <string name="superShuttle">Book a SuperShuttle</string>
    <string name="publicTransit">Take public transportation</string>
    <string name="drive">Have a group member or a friend drive</string>
    <string name="noPref">No preference</string>
    <string name="savePrefs">Save Preferences</string>

    <string name="title_activity_create_group">Create a New Group</string>
    <string name="createGroupInstruc">In order to create a new group, please fill out the following information:</string>
    <string name="createGroup_button">Create Group</string>
    <string name="goBackResults">Back to Search Results</string>

    <string-array name="transPrefs_array">
        <item>Take a taxi</item>
        <item>Book a SuperShuttle</item>
        <item>Take public transportation</item>
        <item>Have a group member or a friend drive</item>
        <item>No preference</item>
    </string-array>

    <string name="title_activity_edit_group">Edit Group</string>
    <string name="pickUpHint">Group Pick-up Address</string>
    <string name="dropOffHint">Group Drop-off Address</string>
    <string name="editGroup_button">Save Edits</string>
    <string name="cancelEdits">Cancel Changes</string>
    <string name="transportation_spinner">Choose Mode of Transportation</string>
    <string name="selectDate">Select Departure Date</string>
    <string name="selectTime">Select Departure Time</string>
    <string name="title_activity_search">Search</string>
    <string name="backToHomepage">Back to Homepage</string>
    <!--<string name="toHint">Pick-Up Location</string>-->
    <!--<string name="fromHint">Drop-Off Location</string>-->
    <string name="airport_spinner">Choose an Airport</string>
    <string name="colleges_spinner">Choose a College/University</string>
    <string name="toFrom_spinner">Select your direction of travel</string>

    <string-array name="airport_array">
        <item>BUR - Bob Hope Airport</item>
        <item>LAX - Los Angeles International Aiport</item>
        <item>LGB - Long Beach Airport</item>
        <item>ONT - Ontario International Airport</item>
        <item>SNA - John Wayne Airport</item>
    </string-array>

    <string-array name="colleges_array">
        <item>Cal Poly Pomona</item>
        <item>Claremont Colleges</item>
        <item>Pepperdine</item>
        <item>UCLA</item>
        <item>UC Fullerton</item>
        <item>UC Irvine</item>
        <item>UC Riverside</item>
        <item>USC</item>
    </string-array>

    <string-array name="toFrom_array">
        <item>To the Airport</item>
        <item>From the Airport</item>
    </string-array>

    <string name="title_activity_group_wall">GroupWallActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
