<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/createGroupInstruc"/>


    <!-- Field for user to input pick-up location -->
    <EditText
        android:id="@+id/username_pickUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pickUpHint" />

    <!-- Field for user to input drop-off location-->
    <EditText
        android:id="@+id/password_dropOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dropOffHint" />

    <!-- Spinner Element for transportation preference -->
    <Spinner
        android:id="@+id/transPrefs_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/transportation_spinner"
        />

    <!--Date and Time selection for leaving location-->
    <Button
        android:id="@+id/selectDate_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectDate" />

    <Button
        android:id="@+id/selectTime_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectTime" />



    <!-- Set OnClickListener to create group when pressed -->
    <Button
        android:id="@+id/viewGroup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createGroup_button" />

    <!-- Set OnClickListener to go back to Search when pressed -->
    <Button
        android:id="@+id/searchResultsList_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goBackResults" />

</LinearLayout>