<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:orientation="vertical">

    <!-- Titles the following instructions -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:paddingBottom="10dp"
        android:text="@string/instructions" />

    <!-- Lists the instructions for preferences -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/selectPrefs" />

    <!-- Sets up all the checkboxes -->
    <CheckBox android:id="@+id/checkbox_taxi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taxi"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_superShuttle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/superShuttle"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_publicTransit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publicTransit"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_drive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drive"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_noPref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noPref"
        android:onClick="onCheckboxClicked"/>

    <!-- Set OnClickListener to trigger preferences save
     when pressed -->
    <Button
        android:id="@+id/homepage_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:textColor="#fdb62a"
        android:layout_marginTop="10dp"
        android:text="@string/savePrefs" />

</LinearLayout>
