<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/groupResults" />

    <!-- Set OnClickListener to trigger list result page when pressed -->
    <Button
        android:id="@+id/createGroup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createAGroup" />

    <Button
        android:id="@+id/searchResultsList_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switchToList" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goBack" />
>>>>>>> Added spinners and calendar to select departure date/time, as well as other small UI changes

</LinearLayout>
