<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <!-- Field for user to input username -->
    <EditText
        android:id="@+id/username_pickUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pickUpHint" />

    <!-- Field for user to input password -->
    <EditText
        android:id="@+id/password_dropOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dropOffHint" />

    <!-- Spinner Element TODO: Write spinner -->
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/transportation_spinner"
        />



    <!-- Set OnClickListener to trigger login when pressed -->
    <Button
        android:id="@+id/viewGroup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editGroup_button" />

</LinearLayout>
