<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/groupInfo" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/airport_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/college_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mode_of_transportation_text"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:textSize="25sp"
        android:text="@string/groupMembers" />

    <!-- List whose dataset is defined in code with an adapter -->
    <ListView
        android:id="@+id/group_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp" />

    <!-- Set OnClickListener to trigger when pressed -->
    <Button
        android:id="@+id/groupWall_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/groupWall" />

    <Button
        android:id="@+id/edit_group_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editGroup" />

    <Button
        android:id="@+id/joinGroup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/joinGroup" />

</LinearLayout>
