<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <!-- Spinner Element for direction preference -->
            <Spinner
                android:id="@+id/toFrom_spinner"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:prompt="@string/toFrom_spinner"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical" >

            <!-- Spinner Element for airport preference -->
            <com.airpool.View.AirportSpinner
                android:id="@+id/airport_spinner"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:prompt="@string/airport_spinner"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <!-- Spinner Element for direction preference -->
            <TextView
                android:id="@+id/to_from_college_text"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical" >

            <!-- Spinner Element for college preference -->
            <com.airpool.View.CollegeSpinner
                android:id="@+id/college_spinner"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:prompt="@string/colleges_spinner"
                />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>